--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "sports-app-flo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "repository": {
     "type": "git",
@@ -35,10 +36,12 @@
     ]
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1"
   }
-  
 }
