--- a/package.json
+++ b/package.json
@@ -37,11 +37,15 @@
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
-    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1"
+  },
+  "devDependencies": {
+    "dart-sass": "^1.25.0",
+    "node-sass": "npm:dart-sass@^1.25.0",
+    "node-sass-install": "^1.0.2"
   }
 }
